--- a/style.css
+++ b/style.css
@@ -4,52 +4,58 @@ body {
     height: 100%;
     position: absolute;
 }
-div#topo{
+#topo{
     background-color: rgb(49, 49, 49);
     margin: auto;
     width: 100%;
     height: 5%;
     float: right;
 }
-div#menulateral {
+#menulateral {
     background-color: rgb(40, 40, 40);
     margin: 0;
     width: 5%;
     position: relative;
-    height: 97%;
+    height: 97.5%;
 }
-div#container{
+#container{
     background-color: rgb(27, 27, 27);
     width: 95%;
     height: 95%;
     float: right;
+    overflow:auto; 
+    text-align: center;
+    align-items: center;
 }
 
 
 
-ul#nav {
+#nav {
     list-style: none;
     padding: 0;
     margin: 0;
 }
-ul#nav li {
+#nav li {
     margin-bottom: 10px;
     
 }
-div#conteudo{
+#conteudo{
     float: right;
     width: 92%;
     height: 90%;
     position: relative;
     padding: 20px;
+
 }
 
-div#linhas {
+#linhas {
     position: relative;
     width: 45px;
+    height: 100%;
 }
-div#linhas ul{
+#linhas ul{
     padding-top: 5px;
+    height: 100%;
     list-style: none;
     padding-left: 0;
     padding-right: 0;
@@ -58,7 +64,7 @@ div#linhas ul{
     margin: 0;
     border-right: rgb(73, 73, 73) solid 1px;
 }
-div#linhas ul li {
+#linhas ul li {
 
     width: 20px;
     margin-bottom: 10px;
@@ -68,14 +74,19 @@ div#linhas ul li {
     text-align: right;
     
 }
-
-div#rodape {
-    background-color: rgb(45, 142, 233);
+.linhasC {
     position: absolute;
+    top: 0;
+}
+
+#rodape {
+    background-color: rgb(45, 142, 233);
+    position: fixed;
+    bottom: 0;
     width: 100%;
     height: 20px;
 }
-div#master {
+#master {
     width: 20px;
     position: relative;
     float: left;
@@ -83,8 +94,8 @@ div#master {
     color: white;
     margin-left: 2%;
 }
-div#ln{
-    position: relative;
+#ln{
+    display: inline-block;
     float: right;
     color: white;
     width: 7%;
@@ -99,17 +110,17 @@ div#ln{
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-img#foto{
-    margin-left: 200px;
+#foto{
+    
+    border-radius: 100%;
     
 }
 #trybe{
-    position:relative;
-    top:-300;
-    left:280px;
+   position: relative;
+   top:-15px;
 }
-div#spaces{
-    position: relative;
+#spaces{
+    display: inline-block;
     float: right;
     color: white;
     width: 5%;
@@ -117,8 +128,8 @@ div#spaces{
     height: 20px;
     
 }
-div#utf{
-    position: relative;
+#utf{
+    display: inline-block;
     float: right;
     color: white;
     width: 4%;
@@ -126,8 +137,8 @@ div#utf{
     height: 20px;
     
 }
-div#html{
-    position: relative;
+#html{
+    display: inline-block;
     float: right;
     color: white;
     width: 3.5%;
@@ -135,8 +146,8 @@ div#html{
     height: 20px;
     
 }
-div#css{
-    position: relative;
+#css{
+    display: inline-block;
     float: right;
     color: white;
     width: 2.5%;
@@ -144,27 +155,19 @@ div#css{
     height: 20px;
     
 }
-div#redes{
-    position: absolute;
-    
-    margin-left: 60px;
-    width: 90%;
-    height: 30%;
+
+#linkedin{
+    display: inline-block;
+    margin-top: 20px;
 }
-div#linkedin{
-    position: relative;
-    float: left;
-    margin-top: 100px;
+#github{
+    display: inline-block;
+    margin-top: 20px;
+    margin-left: 5px;
+   
 }
-div#github{
-    position: relative;
-    margin-left: 300px;
-    margin-top: 100px;
-    float: left;
-}
-div#insta{
-    position: relative;
-    margin-left: 200px;
-    margin-top: 100px;
-    float: left;
+#insta{
+    display: inline-block;
+    margin-top: 20px;
+    margin-left: 15px;
 }
