--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@ body {
     width: 100%;
     height: 100%;
     position: absolute;
+    background-color: #1e1e1e;
 }
 #topo{
     background-color: rgb(49, 49, 49);
+    position: fixed;
     margin: auto;
     width: 100%;
     height: 5%;
@@ -13,19 +15,18 @@ body {
 }
 #menulateral {
     background-color: rgb(40, 40, 40);
+    position: fixed;
     margin: 0;
     width: 5%;
-    position: relative;
-    height: 97.5%;
+    height: 100%;
 }
 #container{
-    background-color: rgb(27, 27, 27);
+    background-color: #1e1e1e;
     width: 95%;
-    height: 95%;
+    height: 100%;
     float: right;
-    overflow:auto; 
     text-align: center;
-    align-items: center;
+    align-items: center;  
 }
 
 
@@ -39,17 +40,33 @@ body {
     margin-bottom: 10px;
     
 }
-#conteudo{
-    float: right;
+#conteudo2 {
+    background-image: url("./bg.svg");
+    opacity: 0.05;
+    position: fixed;
+    left: 12%;
+    top: 5%;
     width: 92%;
     height: 90%;
-    position: relative;
+    background-size: cover;
+}
+#conteudo{
+    position: fixed;
+    top: 10%;
+    float: right;
+    width: 92%;
+    height: 100%;
+    z-index: 2;
     padding: 20px;
+    
+
+    
 
 }
 
 #linhas {
-    position: relative;
+    position: fixed;
+    top: 7%;
     width: 45px;
     height: 100%;
 }
