--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ body {
     height: 100%;
     z-index: 2;
     padding: 20px;
+    overflow: auto;
     
 
     
@@ -99,6 +100,7 @@ body {
 #rodape {
     background-color: rgb(45, 142, 233);
     position: fixed;
+    z-index: 3;
     bottom: 0;
     width: 100%;
     height: 20px;
@@ -187,4 +189,5 @@ body {
     display: inline-block;
     margin-top: 20px;
     margin-left: 15px;
+    margin-bottom: 40px;
 }
