--- a/style2.css
+++ b/style2.css
@@ -130,3 +130,15 @@ body {
     width: 55vw;
     border-radius: .5rem;
 }
+
+.loading {
+    background-color: var(--color-black);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 5;
+}
